# yt-knowledge-extractor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: channel.yaml
docs/: HANDOFF.md  SPEC.md  gemini-api-key.md
scripts/: _common.py  build.py  deploy.py  make_selfsigned_cert.ps1  release_notes_guide.md  run.py  setup.py  sign.py  test.py
src/: main.py
src/yke/: __init__.py  config.py  gpu_runtime.py  gui.py  models.py  paths.py  run.py  token_store.py  updater.py  utils.py  velopack_update.py
src/yke/llm/: __init__.py  claude_client.py  credentials.py  gemini_client.py
src/yke/pipeline/: stage1_ingest.py  stage2_subtitles.py  stage3_stt.py  stage3_stt_vosk.py  stage4_clean.py  stage5_extract.py  stage6_integrate.py  stage_repair.py
tests/: test_channel.py  test_claude_client.py  test_clean.py  test_config.py  test_credentials.py  test_extract_normalize.py  test_gemini_client.py  test_gui_llm.py  test_gui_progress.py  test_ingest.py  test_integrate_render.py  test_llm_factory.py  test_repair.py  test_run.py  test_run_pipeline.py  test_stt.py  test_stt_vosk.py  test_subtitles.py  test_token_store.py  test_updater.py  test_utils.py
