[project]
name = "yt-knowledge-extractor"
version = "0.1.0"
description = "유튜버 한 명의 말 중심 콘텐츠를 개념 단위 지식베이스로 가공하는 PoC"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.1",
    "faster-whisper>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "imageio-ffmpeg>=0.5.1",
    # GUI(flet)는 이 앱의 일급 기능(`yke-gui`)이므로 기본 의존성으로 둔다. optional extra 로
    # 두면 uv 가 명령마다 환경을 재동기화하며 flet 을 설치/삭제 반복한다. flet-desktop 은
    # flet 본체를 함께 끌어온다.
    "flet-desktop>=0.85.3",
]

[project.optional-dependencies]
# GPU(NVIDIA CUDA 12) STT 가속용. CTranslate2 4.8 은 cuDNN 로더(cudnn64_9.dll)를 자체
# 번들하고 whisper 추론엔 cuBLAS 만 쓰므로(RTX 2080 실측 확인) cuBLAS 만 넣는다.
# 설치: `uv sync --extra gpu`  (CPU 전용 환경에서는 불필요)
gpu = [
    "nvidia-cublas-cu12",
]

[project.scripts]
yke = "yke.run:main"
yke-gui = "yke.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yke"]

[dependency-groups]
# flet-cli 는 `flet build`(네이티브 빌드) 전용 도구다. 선언하지 않으면 `uv sync` 가
# 매번 "불필요"로 보고 제거하고, 직후 `flet build` 가 다시 설치해 설치/삭제가 반복된다.
# dev 그룹에 두면 sync 가 보존해 이 churn 을 없앤다.
dev = ["flet-cli>=0.85.3"]

[tool.flet.app]
# src-layout 이므로 flet build 가 src/ 아래에서 진입 모듈을 찾도록 지정한다.
# module 은 점을 확장자 구분자로 다루므로 dotted 경로(yke.gui)는 yke.py 를 찾다 실패한다.
# 앱 루트의 main.py 셔임을 진입점으로 둔다.
module = "main"
path = "src"
