[project]
name = "yt-knowledge-extractor"
version = "0.1.2"
description = "유튜버 한 명의 말 중심 콘텐츠를 개념 단위 지식베이스로 가공하는 PoC"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.1",
    "faster-whisper>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "imageio-ffmpeg>=0.5.1",
    # CPU STT 물리 코어 수 자동 감지용(stage3_stt._detect_physical_cpu_threads). 가볍고
    # 모든 CPU 사용자에게 이득이라 core 의존성으로 둔다(감지 실패 시에도 안전하게 폴백).
    "psutil>=5.9",
    # GUI(flet)는 이 앱의 일급 기능(`yke-gui`)이므로 기본 의존성으로 둔다. optional extra 로
    # 두면 uv 가 명령마다 환경을 재동기화하며 flet 을 설치/삭제 반복한다. flet-desktop 은
    # flet 본체를 함께 끌어온다.
    # flet build 는 이 제약으로 번들용 flet 을 별도 설치하므로 >= 로 두면 최신(예: 0.86.x)을
    # 끌어와 번들 flet 과 flet-cli 가 만든 UI 클라이언트(0.85.x) 버전이 어긋난다. 그러면 앱은
    # 뜨지만 화면이 안 그려진다(빈 창). flet-cli 와 정확히 같은 버전으로 고정한다.
    "flet-desktop==0.85.3",
    # 설치/자동 업데이트(Velopack). velopack 휠은 abi3(cp37-abi3)라 flet 임베디드 Python
    # 버전과 무관하게 번들에 포함된다. 앱 진입점(main.py)에서 App().run() 으로 설치/업데이트
    # 라이프사이클 훅을 처리하고, GUI 에서 UpdateManager 로 GitHub Releases 업데이트를 받는다.
    "velopack>=1.2.0",
    # LLM 프로바이더로 Google Gemini(BYOK) 를 지원한다. 배포된 end-user 는 로컬 `claude` CLI
    # 가 없으므로, 본인 Gemini API 키로 지식 추출·통합·자막 보정을 쓸 수 있어야 한다 →
    # google-genai(신 통합 SDK)를 코어 의존성으로 번들한다(optional 이면 설치기 사용자가
    # `uv sync --extra` 를 못 하므로). Claude 만 쓰는 경우엔 import 되지 않는다(gemini_client
    # 는 provider=gemini 일 때만 지연 로딩).
    "google-genai>=1.0",
    # API 키(BYOK)는 평문 설정 파일이 아니라 OS 자격증명 저장소(Windows 자격증명 관리자)에
    # 보관한다. keyring 은 순수 파이썬 + Windows 내장 백엔드(ctypes)라 번들이 가볍다.
    "keyring>=25.0",
]

[project.optional-dependencies]
# GPU(NVIDIA CUDA 12) STT 가속용. CTranslate2 4.8 은 cuDNN 로더(cudnn64_9.dll)를 자체
# 번들하고 whisper 추론엔 cuBLAS 만 쓰므로(RTX 2080 실측 확인) cuBLAS 만 넣는다.
# 설치: `uv sync --extra gpu`  (CPU 전용 환경에서는 불필요)
gpu = [
    "nvidia-cublas-cu12",
]
# non-AI STT 대안 엔진(Vosk, 경량 오프라인, stage3_stt_vosk 참고). 대부분의 사용자는 쓰지
# 않는 대안 경로라 gpu 와 같은 이유로 optional 로 둔다. 설치: `uv sync --extra vosk`
vosk = [
    "vosk>=0.3.45",
]

[project.scripts]
yke = "yke.run:main"
yke-gui = "yke.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yke"]

[dependency-groups]
# flet-cli 는 `flet build`(네이티브 빌드) 전용 도구다. 선언하지 않으면 `uv sync` 가
# 매번 "불필요"로 보고 제거하고, 직후 `flet build` 가 다시 설치해 설치/삭제가 반복된다.
# pytest 도 마찬가지로 선언 없이 설치하면 `uv sync`(scripts/setup.py 포함) 가 매번
# 지워버린다. dev 그룹에 두면 sync 가 보존해 이 churn 을 없앤다.
# flet-cli 는 UI 클라이언트(Flutter) 버전을 결정한다. 번들 flet-desktop 과 반드시 같은
# 버전으로 고정해야 렌더링 프로토콜이 맞는다(불일치 시 빈 창).
dev = ["flet-cli==0.85.3", "pytest>=8.0"]

[tool.flet.app]
# src-layout 이므로 flet build 가 src/ 아래에서 진입 모듈을 찾도록 지정한다.
# module 은 점을 확장자 구분자로 다루므로 dotted 경로(yke.gui)는 yke.py 를 찾다 실패한다.
# 앱 루트의 main.py 셔임을 진입점으로 둔다.
module = "main"
path = "src"
